# Squirrel

./: .gitignore  AGENTS.md  DEVELOPMENT_PLAN.md  EXAMPLE.md  GEMINI.md  HANDOVER.md  LICENSE  README.md  TODO-current.md  pyproject.toml  test_pipeline.py
.claude/skills/squirrel-session/: SKILL.md
.cursor/rules/: rust-daemon.mdc  specs.mdc  testing.mdc
daemon/: Cargo.toml
daemon/src/: error.rs  lib.rs  main.rs
daemon/src/cli/: apply.rs  daemon.rs  goaway.rs  init.rs  internal.rs  mod.rs  service.rs  status.rs  watch.rs
daemon/src/config/: mod.rs
daemon/src/dashboard/: api.rs
daemon/src/global_config/: mod.rs
daemon/src/mcp/: mod.rs
daemon/src/storage/: mod.rs
daemon/src/watcher/: history.rs  mod.rs  session_tracker.rs
daemon/src/web/: api.rs  assets.rs  mod.rs
daemon/src/web/static/: index.html
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  PROJECT_STRUCTURE.md
reference/learning/: .gitignore
specs/: ARCHITECTURE.md  CONSTITUTION.md  DECISIONS.md  INTERFACES.md  PROMPTS.md  SCHEMAS.md
src/sqrl/: __init__.py  cache.py  storage.py
src/sqrl/agents/: __init__.py  memory_extractor.py  style_syncer.py  user_scanner.py
src/sqrl/ipc/: __init__.py  handlers.py  server.py
src/sqrl/models/: __init__.py  extraction.py
tests/: test_ipc.py
