[package]
name = "sqrl"
version = "0.1.0"
edition = "2021"
description = "Squirrel daemon - local-first memory system for AI coding tools"

[[bin]]
name = "sqrl"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["serde", "v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# Pattern matching (used by doc debt detection)
glob = "0.3"
regex = "1"

# Web server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
rust-embed = "8"

# Utilities
dirs = "5"
open = "5"
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
